force-app/main/default/objects/FEC_Data_Integration_Mapping__c/FEC_Data_Integration_Mapping__c.object-meta.xml
<CustomObject>
    <label>FEC Data Integration Mapping</label>
    <nameField>
        <label>FEC Data Integration Mapping Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>FEC Data Integration Mappings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>