force-app/main/default/objects/FEC_Data_Integration_Mapping__c/fields/ExternalID__c.field-meta.xml
<CustomField>
    <fullName>ExternalID__c</fullName>
    <externalId>true</externalId>
    <label>ExternalID</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>