force-app/main/default/objects/FEC_Data_Integration_Mapping__c/fields/FEC_Auto_Mapping__c.field-meta.xml
<CustomField>
    <fullName>FEC_Auto_Mapping__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Auto Mapping</label>
    <type>Checkbox</type>
</CustomField>