force-app/main/default/objects/FEC_Data_Integration_Mapping__c/fields/FEC_Auto_Mapping_Property__c.field-meta.xml
<CustomField>
    <fullName>FEC_Auto_Mapping_Property__c</fullName>
    <label>Auto Mapping Property</label>
    <length>255</length>
    <type>Text</type>
</CustomField>