force-app/main/default/objects/FEC_Data_Integration_Mapping__c/fields/FEC_Case_Stage__c.field-meta.xml
<CustomField>
    <fullName>FEC_Case_Stage__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>FEC Case Stage</label>
    <referenceTo>FEC_Case_Stage__c</referenceTo>
    <relationshipLabel>FEC Data Integration Mappings</relationshipLabel>
    <relationshipName>FEC_Data_Integration_Mappings</relationshipName>
    <type>Lookup</type>
</CustomField>