force-app/main/default/objects/FEC_Data_Integration_Mapping__c/fields/FEC_Int_Product_Line_Id__c.field-meta.xml
<CustomField>
    <fullName>FEC_Int_Product_Line_Id__c</fullName>
    <label>Int Product Line Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>