force-app/main/default/objects/FEC_Data_Integration_Mapping__c/fields/FEC_Nature_Of_Case__c.field-meta.xml
<CustomField>
    <fullName>FEC_Nature_Of_Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>FEC Nature Of Case</label>
    <referenceTo>FEC_Nature_of_Case__c</referenceTo>
    <relationshipLabel>FEC Data Integration Mappings</relationshipLabel>
    <relationshipName>FEC_Data_Integration_Mappings</relationshipName>
    <type>Lookup</type>
</CustomField>