force-app/main/default/objects/FEC_Data_Integration_Mapping__c/fields/FEC_Process_Change_Status__c.field-meta.xml
<CustomField>
    <fullName>FEC_Process_Change_Status__c</fullName>
    <label>Process Change Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>