force-app/main/default/objects/FEC_Data_Integration_Mapping__c/fields/FEC_ScreenId__c.field-meta.xml
<CustomField>
    <fullName>FEC_ScreenId__c</fullName>
    <label>ScreenId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>