force-app/main/default/objects/FEC_Data_Integration_Mapping__c/fields/FEC_User_Type_Id__c.field-meta.xml
<CustomField>
    <fullName>FEC_User_Type_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User Type Id</label>
    <referenceTo>FEC_User_Type__c</referenceTo>
    <relationshipLabel>FEC Data Integration Mappings</relationshipLabel>
    <relationshipName>FEC_Data_Integration_Mappings</relationshipName>
    <type>Lookup</type>
</CustomField>